<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.alphabeto.ui.main.MainMenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_mainMenu_to_arabic"
            app:destination="@id/arabicAlphabetFragment" />
        <action
            android:id="@+id/action_mainMenu_to_french"
            app:destination="@id/frenchAlphabetFragment" />
    </fragment>

    <fragment
        android:id="@+id/arabicAlphabetFragment"
        android:name="com.alphabeto.ui.arabic.ArabicAlphabetFragment"
        android:label="@string/title_arabic_alphabet"
        tools:layout="@layout/fragment_alphabet_grid">
        <action
            android:id="@+id/action_arabic_to_tracing"
            app:destination="@id/letterTracingFragment" />
    </fragment>

    <fragment
        android:id="@+id/frenchAlphabetFragment"
        android:name="com.alphabeto.ui.french.FrenchAlphabetFragment"
        android:label="@string/title_french_alphabet"
        tools:layout="@layout/fragment_alphabet_grid">
        <action
            android:id="@+id/action_french_to_tracing"
            app:destination="@id/letterTracingFragment" />
    </fragment>

    <fragment
        android:id="@+id/letterTracingFragment"
        android:name="com.alphabeto.ui.common.LetterTracingFragment"
        android:label="@string/title_letter_tracing"
        tools:layout="@layout/fragment_letter_tracing">
        <argument
            android:name="language"
            app:argType="string" />
        <argument
            android:name="character"
            app:argType="string" />
    </fragment>
</navigation>
